@@ -21,7 +21,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<java.version>17</java.version>
+		<java.version>8</java.version>
 		<java.17.options>
 			--add-opens=java.base/java.io=ALL-UNNAMED
 			--add-opens=java.base/java.lang=ALL-UNNAMED
@@ -112,18 +112,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.1</version>
 				<configuration>
-					<source>17</source>
-					<target>17</target>
-					<compilerArgs>
-						<arg>--add-opens=java.base/java.io=ALL-UNNAMED</arg>
-						<arg>--add-opens=java.base/java.lang=ALL-UNNAMED</arg>
-						<arg>--add-opens=java.base/java.math=ALL-UNNAMED</arg>
-						<arg>--add-opens=java.base/java.util=ALL-UNNAMED</arg>
-						<arg>--add-opens=java.base/java.util.concurrent=ALL-UNNAMED</arg>
-						<arg>--add-opens=java.base/java.net=ALL-UNNAMED</arg>
-						<arg>--add-opens=java.base/java.text=ALL-UNNAMED</arg>
-						<arg>--add-opens=java.sql/java.sql=ALL-UNNAMED</arg>
-					</compilerArgs>
+					<source>8</source>
+					<target>8</target>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -136,7 +126,6 @@
 					<forkMode>pertest</forkMode>
 					<argLine>
 						${surefireArgLine}
-						${java.17.options}
 					</argLine>
 					<childDelegation>true</childDelegation>
 					<skipTests>false</skipTests>
